Created DataBase migration for MySQL. Basic logic for work with it via EntityFramework. Added basic Api. #2

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 ################################################################################
 
 /.vs
-/Server/.vs/Server
 /Server/obj
 /Server/Properties
 /Server/bin/Debug/net6.0
+/Server/.vs/*
+/Server/Migrations
