--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.25",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "firebase": "^9.19.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
