--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
@@ -18,9 +19,12 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
-    "firebase": "^9.19.1",
+    "firebase": "^9.22.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
