--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
