--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
@@ -22,12 +25,13 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
+    "eslint-config-next": "^13.4.6",
     "firebase": "^9.22.0",
+    "framer-motion": "^10.12.16",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
